--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <input type="text" value="TEST"/></div>
 <div id="otherDiv">otherDiv</div>
 
+<button onclick="changeZ()">change zIndex</button>
+
 
 </body>
 </html>
